--- a/src/main/webapp/WEB-INF/views/thymeleaf/estadisticasUsuario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/estadisticasUsuario.html
@@ -12,32 +12,41 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
-
 </head>
 <body>
 
 <div th:replace="navbar :: navbar"></div>
 
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="col-md-12">
-            <div class="list-group flex-row justify-content-center">
-                <a th:href="@{/home}" class="list-group-item list-group-item-action activo">MI FATLOSS</a>
-                <a th:href="@{/categoria_alimentos}" class="list-group-item list-group-item-action ">ALIMENTOS</a>
-                <a th:href="@{/recetas}" class="list-group-item list-group-item-action">RECETAS</a>
-                <a th:href="@{/actividadesFisicas}" class="list-group-item list-group-item-action">EN FORMA</a>
+<div class="row mt-4 justify-content-center">
+    <!-- Columna para el gráfico de historial de peso -->
+    <div class="col-md-7">
+        <div class="card">
+            <div class="card-body text-center">
+                <h5 class="card-title">Gráfico de Mi Historial de Peso</h5>
+                <!-- Ajusta el tamaño del gráfico -->
+                <div class="overflow-hidden" style="max-height: 800px;">
+                    <img class="img-fluid rounded w-100" th:src="@{/img/chart.png}" alt="Gráfico de historial de peso" />
+                </div>
             </div>
         </div>
     </div>
 
-
-            <!-- Columna para el gráfico de historial de peso -->
-            <div class="col-md-4">
-                <img th:src="@{/img/chart.png}" alt="Gráfico de historial de peso" />
+    <!-- Columna para el cuadro de estadísticas de peso -->
+    <div class="col-md-5 d-flex align-items-center justify-content-center">
+        <div class="card w-100"> <!-- Ajusta el ancho al 100% -->
+            <div class="card-body text-center">
+                <h5 class="card-title">Estadísticas de Mi Peso</h5>
+                <p class="card-text">Peso Inicial: <span th:text="${pesoInicial}"></span></p>
+                <p class="card-text">Peso Actual: <span th:text="${pesoActual}"></span></p>
+                <p class="card-text">Peso Disminuido: <span th:text="${pesoDisminuido}"></span></p>
+                <p class="card-text">Peso Ganado: <span th:text="${pesoGanado}"></span></p>
+                <p class="card-text">Peso Faltante para Meta: <span th:text="${pesoFaltanteParaMeta}"></span></p>
             </div>
+        </div>
+    </div>
 </div>
-<div th:replace="footer ::footer"></div>
+
+<div th:replace="footer :: footer"></div>
+
 </body>
 </html>
-
