--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -42,6 +42,12 @@
                     <div class="card-text">Recetas</div>
                 </a>
             </div>
+         <div class="card mb-3">
+                        <a th:href="@{/comunidad}">
+                            <img th:src="@{/img/menuReceta.jpg}" alt="Receta">
+                            <div class="card-text">Comunidad</div>
+                        </a>
+                    </div>
         </div>
     </div>
 
