--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -8,20 +8,6 @@
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <script>
-        function visibilidad(formid) {
-            var form = document.getElementById(formid);
-            var button = document.getElementById("button");
-            if (form.style.display === "none") {
-                form.style.display = "block";
-                button.textContent = "-";
-            } else {
-                form.style.display = "none";
-                button.textContent = "+";
-            }
-        }
-    </script>
-
 </head>
 <body>
 
@@ -47,31 +33,46 @@
 
     <h6>Calorias totales:</h6>
     <p th:text="${caloriasTotales}"></p>
-<div class="row">
-    <div class="col-md-4">
-        <div class="colacion" th:if="${desayuno != null}" th:with="alimentos=${desayuno}">
-            <h4>Desayuno</h4>
-        <div th:unless="${#lists.isEmpty(alimentos)}">
-            <ul class="list-unstyled">
-                <li th:each="alimento : ${alimentos}">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="colacion" th:if="${desayuno != null}" th:with="alimentos=${desayuno}">
+                <h4>Desayuno</h4>
+                <div th:unless="${#lists.isEmpty(alimentos)}">
+                    <ul class="list-unstyled">
+                        <li th:each="alimento : ${alimentos}">
+                            <a th:href="@{/alimentos/{id}(id=${alimento.id}, from='diarioAlimentos')}"
+                               th:text="${alimento.cantidad + 'x ' + alimento.nombre}">Nombre del Alimento</a>
+                            <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionDesayuno},fecha=${fecha})}" class="btn btn-danger">x</a>
+                        </li>
+                    </ul>
+                </div>
 
-                    <a th:href="@{/alimentos/{id}(id=${alimento.id}, from='diarioAlimentos')}"
-                       th:text="${alimento.cantidad + 'x ' + alimento.nombre}">Nombre del Alimento</a>
+                <button type="button" onclick="toggleMenu('${alimentos.id}')">+</button>
 
-                    <a th:href="@{/diarioAlimentos/eliminarAlimento/{idAlimento}/{tipoColacion}/{fecha}(idAlimento=${alimento.id},tipoColacion=${tipoColacionDesayuno},fecha=${fecha})}" class="btn btn-danger">x</a>
-                </li>
-            </ul>
+                <!-- Menu de opciones -->
+                <div id="menu${alimentos.id}" style="display: none;">
+                    <!-- Opcion de alimentos recientes -->
+                    <div onclick="toggleAlimentos('recientes${alimentos.id}')">Alimentos recientes</div>
+                    <div id="recientes${alimentos.id}" style="display: none;">
+                        <div th:each="alimento : ${alimentosRecientes}">
+                            <input type="checkbox" th:value="${alimento.id}" th:id="'reciente' + ${alimento.id}"> <label th:for="'reciente' + ${alimento.id}" th:text="${alimento.nombre}"></label>
+                        </div>
+                    </div>
+
+                    <!-- Opcion de alimentos mas consumidos -->
+                    <div onclick="toggleAlimentos('consumidos${alimentos.id}')">Alimentos más consumidos</div>
+                    <div id="consumidos${alimentos.id}" style="display: none;">
+                        <div th:each="alimento : ${alimentosMasConsumidos}">
+                            <input type="checkbox" th:value="${alimento.id}" th:id="'consumido' + ${alimento.id}"> <label th:for="'consumido' + ${alimento.id}" th:text="${alimento.nombre}"></label>
+                        </div>
+                    </div>
+
+                    <!-- Boton para guardar las colaciones -->
+                    <button type="button" onclick="guardarColacion('${alimentos.id}')">Guardar</button>
+                </div>
+            </div>
         </div>
-            <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form2')|">+</button>
-            <form style="display:none;" id="form2" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-                <input type="hidden"  id="tipoColacion" value="0" name="tipoColacion" />
-                <input type="hidden"  id="fecha" value="2" name="fecha" />
-                <select multiple="" name="alimentoIds">
-                    <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
-                </select>
-                <button class="btn btn-success" type="submit">Agregar Alimentos</button>
-            </form>
-        </div>
+    </div>
 
     <div class="colacion" th:if="${almuerzo != null}" th:with="alimentos=${almuerzo}">
         <h4>Almuerzo</h4>
@@ -87,15 +88,7 @@
                 </li>
             </ul>
         </div>
-        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form2')|">+</button>
-        <form style="display:none;" id="form2" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="1" name="tipoColacion" />
-            <input type="hidden"  id="fecha" value="2" name="fecha" />
-            <select multiple="" name="alimentoIds">
-                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
-            </select>
-            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
-        </form>
+
     </div>
 
 
@@ -112,15 +105,7 @@
                 </li>
             </ul>
         </div>
-        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form3')|">+</button>
-        <form style="display:none;" id="form3" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="2" name="tipoColacion" />
-            <input type="hidden"  id="fecha" value="2" name="fecha" />
-            <select multiple="" name="alimentoIds">
-                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
-            </select>
-            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
-        </form>
+
    </div>
 
 
@@ -137,15 +122,6 @@
                 </li>
             </ul>
         </div>
-        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form4')|">+</button>
-        <form style="display:none;" id="form4" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="3" name="tipoColacion" />
-            <input type="hidden"  id="fecha" value="2" name="fecha" />
-            <select multiple="" name="alimentoIds">
-                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
-            </select>
-            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
-        </form>
     </div>
 
 
@@ -162,17 +138,8 @@
                 </li>
             </ul>
         </div>
-        <button id="button" type="button" class="btn btn-success" th:onclick="|visibilidad('form5')|">+</button>
-        <form style="display:none;" id="form5" th:action="@{/diarioAlimentos/agregarAlimentos}" method="post">
-            <input type="hidden"  id="tipoColacion" value="4" name="tipoColacion" />
-            <input type="hidden"  id="fecha" value="2" name="fecha" />
-            <select multiple="" name="alimentoIds">
-                <option id="alimentoId" th:each="alimento : ${alimentosbd}" th:value="${alimento.id}" th:text="${alimento.nombre}">Alimento</option>
-            </select>
-            <button class="btn btn-success" type="submit">Agregar Alimentos</button>
-        </form>
         </div>
-            </div>
+    </div>
     <div class="col-md-8">
         <div id="calendar">
             <div id="monthAndYear"></div>
@@ -246,6 +213,23 @@
 <div th:replace="footer ::footer"></div>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<script>
+    function toggleMenu(id) {
+        var menu = document.getElementById("menu" + id);
+        menu.style.display = menu.style.display === "none" ? "block" : "none";
+    }
+
+    function toggleAlimentos(id) {
+        var alimentos = document.getElementById(id);
+        alimentos.style.display = alimentos.style.display === "none" ? "block" : "none";
+    }
+
+    function guardarColacion(id) {
+        // Aqui va el codigo para enviar la informacion de los alimentos seleccionados, el tipo de colacion y la fecha al backend
+    }
+</script>
 <script>
     let currentMonth = new Date().getMonth();
     let currentYear = new Date().getFullYear();
