--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora IDR</title>
+    <title>Diario alimentos</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <link rel="stylesheet" th:href="@{/css/main.css}"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 </head>
 <body>
@@ -36,6 +35,7 @@
     <div class="row">
         <div class="col-md-4">
             <div class="colacion" th:if="${desayuno != null}" th:with="alimentos=${desayuno}">
+                <input type="hidden" id="tipoColacion" name="tipoColacion" th:value="${tipoColacionDesayuno}">
                 <h4>Desayuno</h4>
                 <div th:unless="${#lists.isEmpty(alimentos)}">
                     <ul class="list-unstyled">
@@ -55,7 +55,8 @@
                     <div onclick="toggleAlimentos('recientes${alimentos.id}')">Alimentos recientes</div>
                     <div id="recientes${alimentos.id}" style="display: none;">
                         <div th:each="alimento : ${alimentosRecientes}">
-                            <input type="checkbox" th:value="${alimento.id}" th:id="'reciente' + ${alimento.id}"> <label th:for="'reciente' + ${alimento.id}" th:text="${alimento.nombre}"></label>
+                            <input type="checkbox" th:value="${alimento.id}" th:id="'reciente' + ${alimento.id}">
+                            <label th:for="'reciente' + ${alimento.id}" th:text="${alimento.nombre}"></label>
                         </div>
                     </div>
 
@@ -68,8 +69,7 @@
                     </div>
 
                     <!-- Boton para guardar las colaciones -->
-                    <button type="button" onclick="guardarColacion('${alimentos.id}')">Guardar</button>
-                </div>
+                    <button onclick="saveMeal()">Guardar</button>
             </div>
         </div>
     </div>
@@ -93,6 +93,7 @@
 
 
     <div class="colacion" th:if="${merienda != null}" th:with="alimentos=${merienda}">
+
         <h4>Merienda</h4>
         <div th:unless="${#lists.isEmpty(alimentos)}">
             <ul class="list-unstyled">
@@ -161,7 +162,7 @@
             </table>
         </div>
     </div>
-</div>
+
     <p th:text="${mensaje}"></p>
 
         <div class="col-md-6">
@@ -207,7 +208,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
 
 <div th:replace="footer ::footer"></div>
@@ -226,8 +226,37 @@
         alimentos.style.display = alimentos.style.display === "none" ? "block" : "none";
     }
 
-    function guardarColacion(id) {
-        // Aqui va el codigo para enviar la informacion de los alimentos seleccionados, el tipo de colacion y la fecha al backend
+    function toggleElementDisplay(id) {
+        var element = document.getElementById(id);
+        element.style.display = element.style.display === "none" ? "block" : "none";
+    }
+
+    function getSelectedFoodIds() {
+        var checkboxes = document.querySelectorAll('input[type=checkbox]:checked');
+        return Array.from(checkboxes, checkbox => checkbox.value);
+    }
+
+    function sendPostRequest(url, data) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('POST', url);
+        xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+        xhr.onload = function() {
+            if (xhr.status === 200) {
+                alert('Colación guardada correctamente');
+            } else {
+                alert('Hubo un error al guardar la colación. Detalles: ' + data);
+            }
+        };
+        xhr.send(encodeURI(data));
+    }
+
+    function saveMeal() {
+        var idsAlimentos = getSelectedFoodIds().join(',');
+        var tipoColacion = document.getElementById('tipoColacion').value;
+        var fecha = window.location.pathname.split('/')[3];
+        var data = 'alimentoIds=' + idsAlimentos + '&tipoColacion=' + tipoColacion + '&fecha=' + fecha;
+        sendPostRequest('/diarioAlimentos/agregarAlimentos', data);
+
     }
 </script>
 <script>
