--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
@@ -23,6 +23,7 @@
                         <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Perfil</a></li>
                         <li><a class="dropdown-item" th:href="@{/configuracion}">Configuracion</a></li>
                         <li><a class="dropdown-item" th:href="@{/notificaciones}">Notificaciones</a></li>
+                        <li><a class="dropdown-item" th:href="@{/listaSeguidores}">Seguidores</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
