--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioAlimentos.html
@@ -55,7 +55,7 @@
                     <div onclick="toggleAlimentos('recientes${alimentos.id}')">Alimentos recientes</div>
                     <div id="recientes${alimentos.id}" style="display: none;">
                         <div th:each="alimento : ${alimentosRecientes}">
-                            <input type="checkbox" th:value="${alimento.id}" th:id="'reciente' + ${alimento.id}">
+                            <input type="checkbox" class="alimento-checkbox" th:value="${alimento.id}" th:id="'reciente' + ${alimento.id}">
                             <label th:for="'reciente' + ${alimento.id}" th:text="${alimento.nombre}"></label>
                         </div>
                     </div>
@@ -64,12 +64,12 @@
                     <div onclick="toggleAlimentos('consumidos${alimentos.id}')">Alimentos más consumidos</div>
                     <div id="consumidos${alimentos.id}" style="display: none;">
                         <div th:each="alimento : ${alimentosMasConsumidos}">
-                            <input type="checkbox" th:value="${alimento.id}" th:id="'consumido' + ${alimento.id}"> <label th:for="'consumido' + ${alimento.id}" th:text="${alimento.nombre}"></label>
+                            <input type="checkbox" class="alimento-checkbox" th:value="${alimento.id}" th:id="'consumido' + ${alimento.id}"> <label th:for="'consumido' + ${alimento.id}" th:text="${alimento.nombre}"></label>
                         </div>
                     </div>
 
                     <!-- Boton para guardar las colaciones -->
-                    <button onclick="saveMeal()">Guardar</button>
+                    <button id="save-button" onclick="saveMeal()">Guardar</button>
             </div>
         </div>
     </div>
@@ -90,7 +90,6 @@
         </div>
 
     </div>
-
 
     <div class="colacion" th:if="${merienda != null}" th:with="alimentos=${merienda}">
 
@@ -208,13 +207,31 @@
                 </div>
             </div>
         </div>
+</div>
 
 
 <div th:replace="footer ::footer"></div>
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
+<script>
+    var checkboxes=document.getElementsByClassName('alimento-checkbox');
+    var saveButton= document.getElementById('save-button');
 
+    function updateSaveButton(){
+        for(var i=0 ; i<checkboxes.length;i++){
+            if(checkboxes[i].checked){
+                saveButton.disabled=false;
+                return;
+            }
+        }
+        saveButton.disabled=true;
+    }
+    for(var i=0; i<checkboxes.length;i++){
+        checkboxes[i].addEventListener('change', updateSaveButton);
+    }
+    updateSaveButton();
+</script>
 <script>
     function toggleMenu(id) {
         var menu = document.getElementById("menu" + id);
@@ -230,6 +247,7 @@
         var element = document.getElementById(id);
         element.style.display = element.style.display === "none" ? "block" : "none";
     }
+
 
     function getSelectedFoodIds() {
         var checkboxes = document.querySelectorAll('input[type=checkbox]:checked');
@@ -255,7 +273,7 @@
         var tipoColacion = document.getElementById('tipoColacion').value;
         var fecha = window.location.pathname.split('/')[3];
         var data = 'alimentoIds=' + idsAlimentos + '&tipoColacion=' + tipoColacion + '&fecha=' + fecha;
-        sendPostRequest('/diarioAlimentos/agregarAlimentos', data);
+        sendPostRequest('/spring/diarioAlimentos/agregarAlimentos', data);
 
     }
 </script>
