like publicaciones y configuracion usuario elimado

--- a/src/main/webapp/WEB-INF/views/thymeleaf/footer.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/footer.html
@@ -10,18 +10,18 @@
     <div class="row d-flex align-items-center">
         <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
             justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
-            <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="140px">
+            <img th:src="@{/img/logo-mono_bg-color.png}" alt="logo" height="100px">
         </div>
         <div class="col-sm-5 d-flex flex-column justify-content-star">
-            <h4>TP Taller Web I: fatloss</h4>
-            <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
-            <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
+            <h3 class="fw-bold">TP Taller Web I: fatloss</h3>
+            <p><img th:src="@{/img/github.png}" alt="logo-github"> Github:  <a class="text-break fw-bold" href="https://github.com/GonzaloFlores1121/grupo4" target="_blank">https://github.com/GonzaloFlores1121/grupo4</a></p>
+            <p><img th:src="@{/img/trello.png}" alt="logo-trello"> Trello:  <a class="text-break fw-bold" href="https://trello.com/w/grupo4tallerweb" target="_blank">https://trello.com/w/grupo4tallerweb</a></p>
         </div>
         <div class="col-sm-5 d-flex flex-column justify-content-star">
-            <h5>Integrantes: </h5>
-            <p>Rodolfo Gutierrez - Gonzalo Flores</p>
-            <p>Milagros Chavez - Kevin Llombart</p>
-            <p>Joaquin Paiva</p>
+            <h5 class="fw-bold">Integrantes: </h5>
+            <p class="fw-bold">Rodolfo Gutierrez - Gonzalo Flores</p>
+            <p class="fw-bold">Milagros Chavez - Kevin Llombart</p>
+            <p class="fw-bold">Joaquin Paiva</p>
         </div>
     </div>
 </footer>
