--- a/src/main/webapp/WEB-INF/views/thymeleaf/favoritos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/favoritos.html
@@ -2,7 +2,7 @@
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Categorias Alimentos</title>
+    <title>Favoritos</title>
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/main.css}">
 
