--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
@@ -10,7 +10,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/home}">
-            <h1 class="display-3" style="font-weight: bold;"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="120px">fatloss</h1>
+            <h1 style="font-weight: bold;"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="100px">fatloss</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -18,24 +18,38 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" th:text="${usuario} ? ${usuario.nombre}: 'Datos Usuario'"></a>
+                    <a class="nav-link dropdown-toggle fw-bold" href="#" role="button" data-bs-toggle="dropdown" th:text="${usuario} ? ${usuario.nombre}: 'Datos Usuario'"></a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/perfilUsuario}">Perfil</a></li>
-                        <li><a class="dropdown-item" th:href="@{/configuracion}">Configuracion</a></li>
+                        <li><a class="dropdown-item" th:href="@{/favoritos}">Favoritos</a></li>
                         <li><a class="dropdown-item" th:href="@{/notificaciones}">Notificaciones</a></li>
-                        <li><a class="dropdown-item" th:href="@{/listaSeguidores}">Seguidores</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
+                    <a class="nav-link dropdown-toggle fw-bold" href="#" role="button" data-bs-toggle="dropdown">Mi Calendario</a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/calendarioDieta}">Dieta</a></li>
                         <li><a class="dropdown-item" th:href="@{/diarioAlimentos}">Alimentacion</a></li>
                         <li><a class="dropdown-item" th:href="@{/diarioEjercicio}">Ejercicios</a></li>
                     </ul>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle fw-bold" href="#" role="button" data-bs-toggle="dropdown">Mi fatloss</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/categoria_alimentos}">Alimentos</a></li>
+                        <li><a class="dropdown-item" th:href="@{/recetas}">Recetas</a></li>
+                        <li><a class="dropdown-item" th:href="@{/actividadesFisicas}">En Forma</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle fw-bold" href="#" role="button" data-bs-toggle="dropdown">Comunidad</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" th:href="@{/comunidad}">Publicaciones</a></li>
+                        <li><a class="dropdown-item" th:href="@{/foro}">Foro</a></li>
+                    </ul>
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/inicio}">Salir</a>
+                    <a class="nav-link fw-bold" th:href="@{/inicio}">Salir</a>
                 </li>
             </ul>
         </div>
